--- a/NarrativeWebPage/styles.css
+++ b/NarrativeWebPage/styles.css
@@ -38,7 +38,7 @@ body {
     font-size: 2rem;
     font-weight: bold;
     font-family: 'Arial Black', sans-serif; /* Added new font */
-    color: #F535AA;
+    color: #824D74;
 }
 
 nav.navbar {
